Tweak to CSS which was bugging me
After clicking the View/Change buttons, the focus around
the buttons would be clipped on the right-hand side. Add a
small margin so the full focus border can display correctly.

--- a/service-front/assets/sass/patterns/_person.scss
+++ b/service-front/assets/sass/patterns/_person.scss
@@ -59,6 +59,7 @@
             + .spinner {
                 margin-bottom: -3px;
             }
+            margin-right: 3px;
         }
 
         &:focus {
